add the new pic

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div id="main">
-        <div id="pic">
-            <img src="./image.jpg" style="width: 400px;height: 480px; border-top-left-radius: 10px;
+        <div id="pic" style="position: relative;" >
+            <img src="./bg02.jpg" style="width: 400px;height: 480px; border-top-left-radius: 10px;
             border-bottom-left-radius: 10px;" >
+            <h1 style="position: absolute; top: 120px;text-align: center;width: 100%;">WELCOME BACK</h1>
 
         </div>
 
@@ -22,10 +23,10 @@
                
 
                <label class="side" >user Name</label> <br> <br>
-                <input type="text" class="side"> <br><br>
+                <input type="text" class="side" placeholder="user Name"> <br><br>
 
                 <label class="side" >password</label><br><br>
-                <input type="password" class="side"> <br><br>
+                <input type="password" class="side" placeholder="passward"> <br><br>
 
                 <input type="checkbox"   class="side">Remember me  
                 <p id="forget" class="side">forget passward</p> <br>
