add the new text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="pic" style="position: relative;" >
             <img src="./bg02.jpg" style="width: 400px;height: 480px; border-top-left-radius: 10px;
             border-bottom-left-radius: 10px;" >
-            <h1 style="position: absolute; top: 120px;text-align: center;width: 100%;">WELCOME BACK</h1>
+            <h1 style="position: absolute; top: 120px;text-align: center;width: 100%;font-size: 50px;color: blueviolet;">WELCOME BACK</h1>
 
         </div>
 
@@ -23,7 +23,7 @@
                
 
                <label class="side" >user Name</label> <br> <br>
-                <input type="text" class="side" placeholder="user Name"> <br><br>
+                <input type="text" class="side" placeholder=" Enter your Gmail"> <br><br>
 
                 <label class="side" >password</label><br><br>
                 <input type="password" class="side" placeholder="passward"> <br><br>
