make it responsive

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div id="pic" style="position: relative;" >
             <img src="./bg02.jpg" style="width: 400px;height: 480px; border-top-left-radius: 10px;
             border-bottom-left-radius: 10px;" >
-            <h1 style="position: absolute; top: 120px;text-align: center;width: 100%;font-size: 50px;color: blueviolet;">WELCOME BACK</h1>
+<h1 style="position: absolute; top: 120px;text-align: center;width: 100%;font-size: 50px;color: blueviolet;">WELCOME BACK</h1>
 
         </div>
 
-        <div >
+        <div id="form">
             
             <form  >
                 <h1  class="side" style="margin-top: 0px;">Login</h1> 
